# thesis

./: .gitignore  README.md  power_allocation.ipynb  pyproject.toml  requirements.txt
experiments/Beam_Selection/: ae_1_16.json  lwm_cls.json  lwm_cls_full_ft.json  lwm_cls_partial_ft.json  raw_model.json  task_config_denver.json  task_config_miami.json
experiments/LoS_NLoS_Classification/: ae_1_16.json  lwm_channel_emb.json  lwm_cls.json  lwm_cls_partial_ft.json  task_config_denver.json  task_config_miami.json
experiments/beam_selection/: ae_1_32.json  lwm_channel_emb.json  lwm_cls_full_ft.json  raw_model.json  task_config_denver.json  task_config_miami.json
experiments/los_nlos_classification/: ae_1_16.json  ae_1_32.json  enhanced_raw_model.json  lwm_channel_emb.json  lwm_cls.json  lwm_cls_full_ft.json  lwm_cls_partial_ft.json  raw_model.json  task_config_denver.json  task_config_miami.json
experiments/power_allocation/: ae_1_16.json  ae_1_32.json  lwm_channel_emb.json  lwm_cls.json  lwm_cls_full_ft.json  lwm_cls_partial_ft.json  raw_model.json  task_config_denver.json  task_config_miami.json
src/: csi_autoencoder_training.ipynb  dataset.py  dataset_creation.ipynb  downstream_models.py  experiments.ipynb  generate_data.py  inference.py  lwm_model.py  metrics.ipynb  metrics.py  power-allocation.ipynb  power-allocation_channel_emb.ipynb  power_allocation.ipynb  power_allocation.py  rascunho.py  scenario_props.py  train.py  utils.py
src/thesis/: beam_selection.py  csi_autoencoder.py  data_classes.py  dataset.py  downstream_models.py  inference.py  los_nlos.py  lwm_model.py  metrics.py  power_allocation.py  train.py  (+3 more)
tex/: .latexmkrc  acronym.tex  applications.tex  collection.bib  conclusion.tex  experiments.tex  header.tex  introduction.tex  notation.tex  preface.tex  related.tex  theory.tex  thesis.tex  titlepage.tex
