[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Thesis"
version = "1.0.0"
description = "Package for the thesis"
readme = "README.md"
authors = [
    { name="Murilo Ferreira Alves Batista", email="murilo.fab@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "DeepMIMOv3",
    "torch",
    "numpy",
    "trackio",
    "tqdm",
    "matplotlib"
]
