[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "1.0.0"
description = "Package for the thesis"
readme = "README.md"
authors = [
    { name="Murilo Ferreira Alves Batista", email="murilo.fab@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "DeepMIMOv3",
    "torch",
    "torchinfo",
    "numpy",
    "tqdm",
    "matplotlib",
    "scikit-learn",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]